--- a/public/index.html
+++ b/public/index.html
@@ -134,9 +134,9 @@
   </main>
   <footer>
       <ul class="team">
-          <li>Nombre integrante 1</li>
-          <li>Nombre integrante 2</li>
-          <li>Nombre integrante 3</li>
+          <li>Benjamin Lanfranco</li>
+          <li>Marcos Lagreste</li>
+          <li>Nombre integrante 3: ?</li>
       </ul>
   </footer>
     <noscript>You need to enable JavaScript to run this app.</noscript>
