--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <title>React App</title>
+    <title>Musicaly App</title>
   </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
